[package]
name = "relativechaos"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.0"
bevy_ratatui = "0.11.1"
crossterm = "0.29.0"
ratatui = "0.30.2"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
